--- a/korea.yaml
+++ b/korea.yaml
@@ -1,1 +1,185 @@
-
+# NAME: korea
+# REPO: https://github.com/derozqn/Clash-Rule-Provider-Merger
+# UPDATED: 2025-05-06 07:08:59
+# DOMAIN: 7
+# DOMAIN-KEYWORD: 17
+# DOMAIN-SUFFIX: 106
+# IP-CIDR: 42
+# PROCESS-NAME: 1
+# TOTAL: 174
+payload:
+  - DOMAIN,api.bithumb.com
+  - DOMAIN,api.upbit.com
+  - DOMAIN,band.us
+  - DOMAIN,banking.ibk.co.kr
+  - DOMAIN,d17lx9ucc6k9fc.cloudfront.net
+  - DOMAIN,d3c7rimkq79yfu.cloudfront.net
+  - DOMAIN,www.koima.or.kr
+  - DOMAIN-KEYWORD,busan
+  - DOMAIN-KEYWORD,coupang
+  - DOMAIN-KEYWORD,daum
+  - DOMAIN-KEYWORD,hana
+  - DOMAIN-KEYWORD,hyundai
+  - DOMAIN-KEYWORD,kakao
+  - DOMAIN-KEYWORD,kia
+  - DOMAIN-KEYWORD,korea
+  - DOMAIN-KEYWORD,lotte
+  - DOMAIN-KEYWORD,naver
+  - DOMAIN-KEYWORD,ncsoft
+  - DOMAIN-KEYWORD,nexon
+  - DOMAIN-KEYWORD,samsung
+  - DOMAIN-KEYWORD,seoul
+  - DOMAIN-KEYWORD,shinhan
+  - DOMAIN-KEYWORD,toss
+  - DOMAIN-KEYWORD,woori
+  - DOMAIN-SUFFIX,11st.co.kr
+  - DOMAIN-SUFFIX,ac.kr
+  - DOMAIN-SUFFIX,afreecatv.com
+  - DOMAIN-SUFFIX,airport.kr
+  - DOMAIN-SUFFIX,auction.co.kr
+  - DOMAIN-SUFFIX,baemin.com
+  - DOMAIN-SUFFIX,bithumb.com
+  - DOMAIN-SUFFIX,chocotv.com.tw
+  - DOMAIN-SUFFIX,co.kr
+  - DOMAIN-SUFFIX,coupang.com
+  - DOMAIN-SUFFIX,coupangcdn.com
+  - DOMAIN-SUFFIX,coupangeats.com
+  - DOMAIN-SUFFIX,coupangplay.com
+  - DOMAIN-SUFFIX,daum.net
+  - DOMAIN-SUFFIX,daumcdn.net
+  - DOMAIN-SUFFIX,daumkakao.io
+  - DOMAIN-SUFFIX,emart.com
+  - DOMAIN-SUFFIX,es.kr
+  - DOMAIN-SUFFIX,gmarket.co.kr
+  - DOMAIN-SUFFIX,go.kr
+  - DOMAIN-SUFFIX,grafolio.com
+  - DOMAIN-SUFFIX,githubusercontent.com
+  - DOMAIN-SUFFIX,hanabank.com
+  - DOMAIN-SUFFIX,hangame.com
+  - DOMAIN-SUFFIX,hs.kr
+  - DOMAIN-SUFFIX,hybe.co.kr
+  - DOMAIN-SUFFIX,interpark.co.kr
+  - DOMAIN-SUFFIX,interpark.com
+  - DOMAIN-SUFFIX,jypentertainment.co.kr
+  - DOMAIN-SUFFIX,kakao.com
+  - DOMAIN-SUFFIX,kakaobank.com
+  - DOMAIN-SUFFIX,kakaocdn.net
+  - DOMAIN-SUFFIX,kakaocorp.com
+  - DOMAIN-SUFFIX,kakaopay.com
+  - DOMAIN-SUFFIX,kbcard.com
+  - DOMAIN-SUFFIX,kbstar.com
+  - DOMAIN-SUFFIX,kookmin.com
+  - DOMAIN-SUFFIX,korail.co.kr
+  - DOMAIN-SUFFIX,korail.com
+  - DOMAIN-SUFFIX,kr
+  - DOMAIN-SUFFIX,krafton.com
+  - DOMAIN-SUFFIX,kt.com
+  - DOMAIN-SUFFIX,letskorail.co.kr
+  - DOMAIN-SUFFIX,lguplus.co.kr
+  - DOMAIN-SUFFIX,lin.ee
+  - DOMAIN-SUFFIX,line-apps-beta.com
+  - DOMAIN-SUFFIX,line-apps.com
+  - DOMAIN-SUFFIX,line-beta.me
+  - DOMAIN-SUFFIX,line-cdn.net
+  - DOMAIN-SUFFIX,line-scdn.net
+  - DOMAIN-SUFFIX,line.me
+  - DOMAIN-SUFFIX,linecorp.com
+  - DOMAIN-SUFFIX,linefriends.com
+  - DOMAIN-SUFFIX,linefriends.com.tw
+  - DOMAIN-SUFFIX,linegame.jp
+  - DOMAIN-SUFFIX,linemobile.com
+  - DOMAIN-SUFFIX,linetv.tw
+  - DOMAIN-SUFFIX,mangoplate.com
+  - DOMAIN-SUFFIX,melon.com
+  - DOMAIN-SUFFIX,ms.kr
+  - DOMAIN-SUFFIX,musinsa.com
+  - DOMAIN-SUFFIX,naver.com
+  - DOMAIN-SUFFIX,naver.jp
+  - DOMAIN-SUFFIX,naver.net
+  - DOMAIN-SUFFIX,navercloud.com
+  - DOMAIN-SUFFIX,navercorp.com
+  - DOMAIN-SUFFIX,naverpay.com
+  - DOMAIN-SUFFIX,ncsoft.com
+  - DOMAIN-SUFFIX,ne.kr
+  - DOMAIN-SUFFIX,netmarble.com
+  - DOMAIN-SUFFIX,nexon.com
+  - DOMAIN-SUFFIX,nexon.net
+  - DOMAIN-SUFFIX,nh.co.kr
+  - DOMAIN-SUFFIX,nhncorp.jp
+  - DOMAIN-SUFFIX,nonghyup.com
+  - DOMAIN-SUFFIX,olleh.com
+  - DOMAIN-SUFFIX,or.kr
+  - DOMAIN-SUFFIX,payco.com
+  - DOMAIN-SUFFIX,pe.kr
+  - DOMAIN-SUFFIX,pearlabyss.com
+  - DOMAIN-SUFFIX,plaync.com
+  - DOMAIN-SUFFIX,plug.game
+  - DOMAIN-SUFFIX,pmang.com
+  - DOMAIN-SUFFIX,pstatic.net
+  - DOMAIN-SUFFIX,re.kr
+  - DOMAIN-SUFFIX,shinhan.com
+  - DOMAIN-SUFFIX,shinhancard.com
+  - DOMAIN-SUFFIX,shinsegae.com
+  - DOMAIN-SUFFIX,sk.com
+  - DOMAIN-SUFFIX,sktelecom.com
+  - DOMAIN-SUFFIX,smartmediarep.com
+  - DOMAIN-SUFFIX,smtown.com
+  - DOMAIN-SUFFIX,ssg.com
+  - DOMAIN-SUFFIX,tmon.co.kr
+  - DOMAIN-SUFFIX,toss.im
+  - DOMAIN-SUFFIX,tving.com
+  - DOMAIN-SUFFIX,upbit.com
+  - DOMAIN-SUFFIX,uplus.co.kr
+  - DOMAIN-SUFFIX,watcha.com
+  - DOMAIN-SUFFIX,wavve.com
+  - DOMAIN-SUFFIX,webtoons.com
+  - DOMAIN-SUFFIX,webzen.com
+  - DOMAIN-SUFFIX,wemakeprice.co.kr
+  - DOMAIN-SUFFIX,wooribank.com
+  - DOMAIN-SUFFIX,ygfamily.com
+  - DOMAIN-SUFFIX,yogiyo.co.kr
+  - DOMAIN-SUFFIX,배달의민족.com
+  - IP-CIDR,1.201.0.0/24,no-resolve
+  - IP-CIDR,101.101.160.0/20
+  - IP-CIDR,103.2.28.0/24
+  - IP-CIDR,103.2.30.0/23
+  - IP-CIDR,103.6.172.0/24
+  - IP-CIDR,103.6.174.0/23
+  - IP-CIDR,106.10.32.0/19
+  - IP-CIDR,106.240.0.0/12,no-resolve
+  - IP-CIDR,110.165.16.0/20
+  - IP-CIDR,110.234.236.0/22
+  - IP-CIDR,110.234.240.0/22
+  - IP-CIDR,110.234.244.0/24
+  - IP-CIDR,110.234.246.0/23
+  - IP-CIDR,110.234.248.0/21
+  - IP-CIDR,110.234.64.0/18
+  - IP-CIDR,110.93.144.0/20
+  - IP-CIDR,111.91.128.0/20
+  - IP-CIDR,114.111.32.0/20
+  - IP-CIDR,119.235.224.0/24
+  - IP-CIDR,119.235.232.0/24
+  - IP-CIDR,119.235.235.0/24
+  - IP-CIDR,119.235.236.0/23
+  - IP-CIDR,125.209.192.0/18
+  - IP-CIDR,125.6.190.0/24
+  - IP-CIDR,147.92.128.0/17
+  - IP-CIDR,175.158.0.0/19
+  - IP-CIDR,175.192.0.0/10,no-resolve
+  - IP-CIDR,203.104.103.0/24
+  - IP-CIDR,203.104.128.0/20
+  - IP-CIDR,203.104.144.0/21
+  - IP-CIDR,203.104.152.0/22
+  - IP-CIDR,203.104.156.0/23
+  - IP-CIDR,203.104.158.0/24
+  - IP-CIDR,203.174.66.64/26
+  - IP-CIDR,203.174.77.0/24
+  - IP-CIDR,210.0.0.0/8,no-resolve
+  - IP-CIDR,211.0.0.0/8,no-resolve
+  - IP-CIDR,218.0.0.0/8,no-resolve
+  - IP-CIDR,220.0.0.0/8,no-resolve
+  - IP-CIDR,221.0.0.0/8,no-resolve
+  - IP-CIDR,27.0.0.0/8,no-resolve
+  - IP-CIDR,59.0.0.0/8,no-resolve
+  - IP-CIDR6,2400:dcc0::/32
+  - PROCESS-NAME,com.linecorp.linetv
