--- a/korea.yaml
+++ b/korea.yaml
@@ -1,185 +1,207 @@
-# NAME: korea
-# REPO: https://github.com/derozqn/Clash-Rule-Provider-Merger
-# UPDATED: 2025-05-06 07:08:59
-# DOMAIN: 7
-# DOMAIN-KEYWORD: 17
-# DOMAIN-SUFFIX: 106
-# IP-CIDR: 42
-# PROCESS-NAME: 1
-# TOTAL: 174
 payload:
-  - DOMAIN,api.bithumb.com
+  - DOMAIN,pf.kakao.com
+  - DOMAIN,talk.kakao.com
+  - DOMAIN,story.kakao.com
+  - DOMAIN,accounts.kakao.com
+  - DOMAIN,developers.kakao.com
+  - DOMAIN,auth.kakao.com
+  - DOMAIN,api.daum.net
+  - DOMAIN,df.nexon.com
   - DOMAIN,api.upbit.com
+  - DOMAIN,api.bithumb.com
   - DOMAIN,band.us
   - DOMAIN,banking.ibk.co.kr
-  - DOMAIN,d17lx9ucc6k9fc.cloudfront.net
-  - DOMAIN,d3c7rimkq79yfu.cloudfront.net
-  - DOMAIN,www.koima.or.kr
-  - DOMAIN-KEYWORD,busan
-  - DOMAIN-KEYWORD,coupang
+  - DOMAIN-KEYWORD,naver
   - DOMAIN-KEYWORD,daum
+  - DOMAIN-KEYWORD,kakao
+  - DOMAIN-KEYWORD,kakaotalk
+  - DOMAIN-KEYWORD,coupang
+  - DOMAIN-KEYWORD,toss
+  - DOMAIN-KEYWORD,samsung
+  - DOMAIN-KEYWORD,korea
+  - DOMAIN-KEYWORD,seoul
+  - DOMAIN-KEYWORD,busan
+  - DOMAIN-KEYWORD,dcinside
+  - DOMAIN-KEYWORD,gmarket
+  - DOMAIN-KEYWORD,inven
+  - DOMAIN-KEYWORD,ppomppu
+  - DOMAIN-KEYWORD,ruliweb
+  - DOMAIN-KEYWORD,quasarzone
+  - DOMAIN-KEYWORD,coolenjoy
+  - DOMAIN-KEYWORD,payco
+  - DOMAIN-KEYWORD,auction
+  - DOMAIN-KEYWORD,kbstar
+  - DOMAIN-KEYWORD,shinhan
+  - DOMAIN-KEYWORD,woori
   - DOMAIN-KEYWORD,hana
   - DOMAIN-KEYWORD,hyundai
-  - DOMAIN-KEYWORD,kakao
-  - DOMAIN-KEYWORD,kia
-  - DOMAIN-KEYWORD,korea
-  - DOMAIN-KEYWORD,lotte
-  - DOMAIN-KEYWORD,naver
-  - DOMAIN-KEYWORD,ncsoft
+  - DOMAIN-KEYWORD,kookmin
+  - DOMAIN-KEYWORD,ibk
+  - DOMAIN-KEYWORD,nonghyup
+  - DOMAIN-KEYWORD,kdb
+  - DOMAIN-KEYWORD,kakaopay
+  - DOMAIN-KEYWORD,naverpay
+  - DOMAIN-KEYWORD,samsungpay
+  - DOMAIN-KEYWORD,tosspay
+  - DOMAIN-KEYWORD,lpay
+  - DOMAIN-KEYWORD,ssgpay
   - DOMAIN-KEYWORD,nexon
-  - DOMAIN-KEYWORD,samsung
-  - DOMAIN-KEYWORD,seoul
-  - DOMAIN-KEYWORD,shinhan
-  - DOMAIN-KEYWORD,toss
-  - DOMAIN-KEYWORD,woori
-  - DOMAIN-SUFFIX,11st.co.kr
-  - DOMAIN-SUFFIX,ac.kr
-  - DOMAIN-SUFFIX,afreecatv.com
-  - DOMAIN-SUFFIX,airport.kr
-  - DOMAIN-SUFFIX,auction.co.kr
-  - DOMAIN-SUFFIX,baemin.com
-  - DOMAIN-SUFFIX,bithumb.com
-  - DOMAIN-SUFFIX,chocotv.com.tw
-  - DOMAIN-SUFFIX,co.kr
-  - DOMAIN-SUFFIX,coupang.com
-  - DOMAIN-SUFFIX,coupangcdn.com
-  - DOMAIN-SUFFIX,coupangeats.com
-  - DOMAIN-SUFFIX,coupangplay.com
-  - DOMAIN-SUFFIX,daum.net
-  - DOMAIN-SUFFIX,daumcdn.net
-  - DOMAIN-SUFFIX,daumkakao.io
-  - DOMAIN-SUFFIX,emart.com
-  - DOMAIN-SUFFIX,es.kr
-  - DOMAIN-SUFFIX,gmarket.co.kr
-  - DOMAIN-SUFFIX,go.kr
-  - DOMAIN-SUFFIX,grafolio.com
-  - DOMAIN-SUFFIX,githubusercontent.com
-  - DOMAIN-SUFFIX,hanabank.com
-  - DOMAIN-SUFFIX,hangame.com
-  - DOMAIN-SUFFIX,hs.kr
-  - DOMAIN-SUFFIX,hybe.co.kr
-  - DOMAIN-SUFFIX,interpark.co.kr
-  - DOMAIN-SUFFIX,interpark.com
-  - DOMAIN-SUFFIX,jypentertainment.co.kr
-  - DOMAIN-SUFFIX,kakao.com
-  - DOMAIN-SUFFIX,kakaobank.com
-  - DOMAIN-SUFFIX,kakaocdn.net
-  - DOMAIN-SUFFIX,kakaocorp.com
-  - DOMAIN-SUFFIX,kakaopay.com
-  - DOMAIN-SUFFIX,kbcard.com
-  - DOMAIN-SUFFIX,kbstar.com
-  - DOMAIN-SUFFIX,kookmin.com
-  - DOMAIN-SUFFIX,korail.co.kr
-  - DOMAIN-SUFFIX,korail.com
+  - DOMAIN-KEYWORD,ncsoft
+  - DOMAIN-KEYWORD,netmarble
+  - DOMAIN-KEYWORD,smilegate
+  - DOMAIN-KEYWORD,krafton
+  - DOMAIN-KEYWORD,pearlabyss
+  - DOMAIN-KEYWORD,gamevil
+  - DOMAIN-KEYWORD,com2us
+  - DOMAIN-KEYWORD,kakaogames
+  - DOMAIN-KEYWORD,neople
+  - DOMAIN-KEYWORD,wemade
   - DOMAIN-SUFFIX,kr
-  - DOMAIN-SUFFIX,krafton.com
-  - DOMAIN-SUFFIX,kt.com
-  - DOMAIN-SUFFIX,letskorail.co.kr
-  - DOMAIN-SUFFIX,lguplus.co.kr
-  - DOMAIN-SUFFIX,lin.ee
-  - DOMAIN-SUFFIX,line-apps-beta.com
-  - DOMAIN-SUFFIX,line-apps.com
-  - DOMAIN-SUFFIX,line-beta.me
-  - DOMAIN-SUFFIX,line-cdn.net
-  - DOMAIN-SUFFIX,line-scdn.net
-  - DOMAIN-SUFFIX,line.me
-  - DOMAIN-SUFFIX,linecorp.com
-  - DOMAIN-SUFFIX,linefriends.com
-  - DOMAIN-SUFFIX,linefriends.com.tw
-  - DOMAIN-SUFFIX,linegame.jp
-  - DOMAIN-SUFFIX,linemobile.com
-  - DOMAIN-SUFFIX,linetv.tw
-  - DOMAIN-SUFFIX,mangoplate.com
-  - DOMAIN-SUFFIX,melon.com
-  - DOMAIN-SUFFIX,ms.kr
-  - DOMAIN-SUFFIX,musinsa.com
-  - DOMAIN-SUFFIX,naver.com
-  - DOMAIN-SUFFIX,naver.jp
-  - DOMAIN-SUFFIX,naver.net
-  - DOMAIN-SUFFIX,navercloud.com
-  - DOMAIN-SUFFIX,navercorp.com
-  - DOMAIN-SUFFIX,naverpay.com
-  - DOMAIN-SUFFIX,ncsoft.com
+  - DOMAIN-SUFFIX,co.kr
+  - DOMAIN-SUFFIX,go.kr
+  - DOMAIN-SUFFIX,ac.kr
+  - DOMAIN-SUFFIX,or.kr
   - DOMAIN-SUFFIX,ne.kr
-  - DOMAIN-SUFFIX,netmarble.com
+  - DOMAIN-SUFFIX,re.kr
+  - DOMAIN-SUFFIX,pe.kr
+  - DOMAIN-SUFFIX,hs.kr
+  - DOMAIN-SUFFIX,ms.kr
+  - DOMAIN-SUFFIX,es.kr
   - DOMAIN-SUFFIX,nexon.com
   - DOMAIN-SUFFIX,nexon.net
-  - DOMAIN-SUFFIX,nh.co.kr
-  - DOMAIN-SUFFIX,nhncorp.jp
-  - DOMAIN-SUFFIX,nonghyup.com
-  - DOMAIN-SUFFIX,olleh.com
-  - DOMAIN-SUFFIX,or.kr
-  - DOMAIN-SUFFIX,payco.com
-  - DOMAIN-SUFFIX,pe.kr
+  - DOMAIN-SUFFIX,nexonm.com
+  - DOMAIN-SUFFIX,ncsoft.com
+  - DOMAIN-SUFFIX,ncsoft.jp
+  - DOMAIN-SUFFIX,netmarble.com
+  - DOMAIN-SUFFIX,netmarble.net
+  - DOMAIN-SUFFIX,smilegate.com
+  - DOMAIN-SUFFIX,smilegateentertainment.com
+  - DOMAIN-SUFFIX,krafton.com
+  - DOMAIN-SUFFIX,pubg.com
   - DOMAIN-SUFFIX,pearlabyss.com
-  - DOMAIN-SUFFIX,plaync.com
-  - DOMAIN-SUFFIX,plug.game
-  - DOMAIN-SUFFIX,pmang.com
-  - DOMAIN-SUFFIX,pstatic.net
-  - DOMAIN-SUFFIX,re.kr
-  - DOMAIN-SUFFIX,shinhan.com
+  - DOMAIN-SUFFIX,blackdesert.com
+  - DOMAIN-SUFFIX,playblackdesert.com
+  - DOMAIN-SUFFIX,gamevil.com
+  - DOMAIN-SUFFIX,com2us.com
+  - DOMAIN-SUFFIX,com2us.jp
+  - DOMAIN-SUFFIX,wemade.com
+  - DOMAIN-SUFFIX,payco.com
+  - DOMAIN-SUFFIX,pay.naver.com
+  - DOMAIN-SUFFIX,kakaopay.com
+  - DOMAIN-SUFFIX,tosspayments.com
+  - DOMAIN-SUFFIX,tosspay.com
+  - DOMAIN-SUFFIX,samsungpay.com
+  - DOMAIN-SUFFIX,lpay.com
+  - DOMAIN-SUFFIX,ssgpay.com
   - DOMAIN-SUFFIX,shinhancard.com
-  - DOMAIN-SUFFIX,shinsegae.com
-  - DOMAIN-SUFFIX,sk.com
-  - DOMAIN-SUFFIX,sktelecom.com
-  - DOMAIN-SUFFIX,smartmediarep.com
-  - DOMAIN-SUFFIX,smtown.com
-  - DOMAIN-SUFFIX,ssg.com
-  - DOMAIN-SUFFIX,tmon.co.kr
-  - DOMAIN-SUFFIX,toss.im
-  - DOMAIN-SUFFIX,tving.com
-  - DOMAIN-SUFFIX,upbit.com
-  - DOMAIN-SUFFIX,uplus.co.kr
-  - DOMAIN-SUFFIX,watcha.com
+  - DOMAIN-SUFFIX,hyundaicard.com
+  - DOMAIN-SUFFIX,samsungcard.com
+  - DOMAIN-SUFFIX,lpoint.com
+  - DOMAIN-SUFFIX,dcinside.com
+  - DOMAIN-SUFFIX,ruliweb.com
+  - DOMAIN-SUFFIX,clien.net
+  - DOMAIN-SUFFIX,todayhumor.co.kr
+  - DOMAIN-SUFFIX,fmkorea.com
+  - DOMAIN-SUFFIX,quasarzone.com
+  - DOMAIN-SUFFIX,coolenjoy.net
+  - DOMAIN-SUFFIX,ilgon.com
+  - DOMAIN-SUFFIX,ygosu.com
+  - DOMAIN-SUFFIX,itworld.co.kr
+  - DOMAIN-SUFFIX,dpg.danawa.com
+  - DOMAIN-SUFFIX,gamevu.co.kr
+  - DOMAIN-SUFFIX,gamemeca.com
+  - DOMAIN-SUFFIX,thisisgame.com
+  - DOMAIN-SUFFIX,interpark.com
+  - DOMAIN-SUFFIX,gsshop.com
+  - DOMAIN-SUFFIX,hnsmall.com
+  - DOMAIN-SUFFIX,lotteon.com
+  - DOMAIN-SUFFIX,musinsa.com
+  - DOMAIN-SUFFIX,brandi.co.kr
+  - DOMAIN-SUFFIX,wconcept.co.kr
+  - DOMAIN-SUFFIX,myrealtrip.com
+  - DOMAIN-SUFFIX,yanolja.com
+  - DOMAIN-SUFFIX,goodchoice.kr
+  - DOMAIN-SUFFIX,triple.guide
+  - DOMAIN-SUFFIX,musically.com
+  - DOMAIN-SUFFIX,newsis.com
+  - DOMAIN-SUFFIX,news1.kr
+  - DOMAIN-SUFFIX,nocutnews.co.kr
+  - DOMAIN-SUFFIX,ohmynews.com
+  - DOMAIN-SUFFIX,edaily.co.kr
+  - DOMAIN-SUFFIX,sedaily.com
+  - DOMAIN-SUFFIX,chosun.com
+  - DOMAIN-SUFFIX,joongang.co.kr
+  - DOMAIN-SUFFIX,donga.com
+  - DOMAIN-SUFFIX,hani.co.kr
+  - DOMAIN-SUFFIX,mk.co.kr
+  - DOMAIN-SUFFIX,hankyung.com
   - DOMAIN-SUFFIX,wavve.com
-  - DOMAIN-SUFFIX,webtoons.com
-  - DOMAIN-SUFFIX,webzen.com
-  - DOMAIN-SUFFIX,wemakeprice.co.kr
-  - DOMAIN-SUFFIX,wooribank.com
-  - DOMAIN-SUFFIX,ygfamily.com
+  - DOMAIN-SUFFIX,tving.com
+  - DOMAIN-SUFFIX,watcha.com
+  - DOMAIN-SUFFIX,afreecatv.com
+  - DOMAIN-SUFFIX,genie.co.kr
+  - DOMAIN-SUFFIX,bugs.co.kr
+  - DOMAIN-SUFFIX,vlive.tv
+  - DOMAIN-SUFFIX,podbbang.com
+  - DOMAIN-SUFFIX,laftel.net
+  - DOMAIN-SUFFIX,ridi.com
+  - DOMAIN-SUFFIX,series.naver.com
+  - DOMAIN-SUFFIX,ktv.pooq.com
+  - DOMAIN-SUFFIX,baemin.com
   - DOMAIN-SUFFIX,yogiyo.co.kr
-  - DOMAIN-SUFFIX,배달의민족.com
-  - IP-CIDR,1.201.0.0/24,no-resolve
-  - IP-CIDR,101.101.160.0/20
-  - IP-CIDR,103.2.28.0/24
-  - IP-CIDR,103.2.30.0/23
-  - IP-CIDR,103.6.172.0/24
-  - IP-CIDR,103.6.174.0/23
-  - IP-CIDR,106.10.32.0/19
-  - IP-CIDR,106.240.0.0/12,no-resolve
-  - IP-CIDR,110.165.16.0/20
-  - IP-CIDR,110.234.236.0/22
-  - IP-CIDR,110.234.240.0/22
-  - IP-CIDR,110.234.244.0/24
-  - IP-CIDR,110.234.246.0/23
-  - IP-CIDR,110.234.248.0/21
-  - IP-CIDR,110.234.64.0/18
-  - IP-CIDR,110.93.144.0/20
-  - IP-CIDR,111.91.128.0/20
-  - IP-CIDR,114.111.32.0/20
-  - IP-CIDR,119.235.224.0/24
-  - IP-CIDR,119.235.232.0/24
-  - IP-CIDR,119.235.235.0/24
-  - IP-CIDR,119.235.236.0/23
-  - IP-CIDR,125.209.192.0/18
-  - IP-CIDR,125.6.190.0/24
-  - IP-CIDR,147.92.128.0/17
-  - IP-CIDR,175.158.0.0/19
+  - DOMAIN-SUFFIX,zigbang.com
+  - DOMAIN-SUFFIX,danawa.com
+  - DOMAIN-SUFFIX,namu.wiki
+  - DOMAIN-SUFFIX,ridibooks.com
+  - DOMAIN-SUFFIX,yes24.com
+  - DOMAIN-SUFFIX,aladin.co.kr
+  - DOMAIN-SUFFIX,munto.kr
+  - DOMAIN-SUFFIX,jobkorea.co.kr
+  - DOMAIN-SUFFIX,saramin.co.kr
+  - DOMAIN-SUFFIX,incruit.com
+  - DOMAIN-SUFFIX,alba.co.kr
+  - DOMAIN-SUFFIX,pstatic.net
+  - DOMAIN-SUFFIX,smartstore.naver.com
+  - DOMAIN-SUFFIX,blog.naver.com
+  - DOMAIN-SUFFIX,cafe.naver.com
+  - DOMAIN-SUFFIX,search.naver.com
+  - DOMAIN-SUFFIX,naverwebtoon.com
+  - DOMAIN-SUFFIX,whale.naver.com
+  - DOMAIN-SUFFIX,mail.naver.com
+  - DOMAIN-SUFFIX,dict.naver.com
+  - DOMAIN-SUFFIX,map.naver.com
+  - DOMAIN-SUFFIX,map.kakao.com
+  - DOMAIN-SUFFIX,tmapapi.sktelecom.com
+  - DOMAIN-SUFFIX,tmap.co.kr
+  - DOMAIN-SUFFIX,ebid.co.kr
+  - DOMAIN-SUFFIX,odsay.com
+  - DOMAIN-SUFFIX,kakaomap.com
+  - DOMAIN-SUFFIX,sktelecom.com
+  - DOMAIN-SUFFIX,tworld.co.kr
+  - DOMAIN-SUFFIX,kt.com
+  - DOMAIN-SUFFIX,uplus.co.kr
+  - DOMAIN-SUFFIX,one-store.co.kr
+  - DOMAIN-SUFFIX,nate.com
+  - DOMAIN-SUFFIX,nis.go.kr
+  - DOMAIN-SUFFIX,nps.or.kr
+  - DOMAIN-SUFFIX,nhis.or.kr
+  - DOMAIN-SUFFIX,police.go.kr
+  - DOMAIN-SUFFIX,mois.go.kr
+  - DOMAIN-SUFFIX,msit.go.kr
+  - DOMAIN-SUFFIX,mofa.go.kr
+  - DOMAIN-SUFFIX,moef.go.kr
+  - DOMAIN-SUFFIX,hometax.go.kr
+  - DOMAIN-SUFFIX,seoulmetro.co.kr
+  - DOMAIN-SUFFIX,nl.go.kr
+  - DOMAIN-SUFFIX,kipo.go.kr
+  - DOMAIN-SUFFIX,nts.go.kr
+  - DOMAIN-SUFFIX,mfds.go.kr
+  - IP-CIDR,27.0.0.0/8,no-resolve
   - IP-CIDR,175.192.0.0/10,no-resolve
-  - IP-CIDR,203.104.103.0/24
-  - IP-CIDR,203.104.128.0/20
-  - IP-CIDR,203.104.144.0/21
-  - IP-CIDR,203.104.152.0/22
-  - IP-CIDR,203.104.156.0/23
-  - IP-CIDR,203.104.158.0/24
-  - IP-CIDR,203.174.66.64/26
-  - IP-CIDR,203.174.77.0/24
-  - IP-CIDR,210.0.0.0/8,no-resolve
   - IP-CIDR,211.0.0.0/8,no-resolve
-  - IP-CIDR,218.0.0.0/8,no-resolve
+  - IP-CIDR,106.240.0.0/12,no-resolve
+  - IP-CIDR,210.0.0.0/8,no-resolve
+  - IP-CIDR,59.0.0.0/8,no-resolve
   - IP-CIDR,220.0.0.0/8,no-resolve
   - IP-CIDR,221.0.0.0/8,no-resolve
-  - IP-CIDR,27.0.0.0/8,no-resolve
-  - IP-CIDR,59.0.0.0/8,no-resolve
-  - IP-CIDR6,2400:dcc0::/32
-  - PROCESS-NAME,com.linecorp.linetv
+  - IP-CIDR,218.0.0.0/8,no-resolve
