--- a/minecraft.yaml
+++ b/minecraft.yaml
@@ -1,1 +1,303 @@
-
+payload:
+  - DST-PORT,25565
+  - SRC-PORT,25565
+  - DST-PORT,19132,udp
+  - DST-PORT,19133,udp
+  - DST-PORT,24454
+  - DST-PORT,25575
+  - DST-PORT,8123
+  - DST-PORT,25566:25665
+  - DST-PORT,35565
+  - DST-PORT,28015
+  - DST-PORT,7777
+  - DOMAIN,pf.kakao.com
+  - DOMAIN,talk.kakao.com
+  - DOMAIN,story.kakao.com
+  - DOMAIN,accounts.kakao.com
+  - DOMAIN,developers.kakao.com
+  - DOMAIN,auth.kakao.com
+  - DOMAIN,api.daum.net
+  - DOMAIN,df.nexon.com
+  - DOMAIN,api.upbit.com
+  - DOMAIN,api.bithumb.com
+  - DOMAIN,band.us
+  - DOMAIN,banking.ibk.co.kr
+  - DOMAIN-KEYWORD,minecraft
+  - DOMAIN-KEYWORD,mojang
+  - DOMAIN-KEYWORD,minecraftservices
+  - DOMAIN-KEYWORD,minecraftforum
+  - DOMAIN-KEYWORD,minecraftwiki
+  - DOMAIN-KEYWORD,mcmod
+  - DOMAIN-KEYWORD,shadersmods
+  - DOMAIN-KEYWORD,hermitcraft
+  - DOMAIN-KEYWORD,craftbukkit
+  - DOMAIN-KEYWORD,ely.by
+  - DOMAIN-KEYWORD,mcpe
+  - DOMAIN-KEYWORD,craftmania
+  - DOMAIN-KEYWORD,minecubos
+  - DOMAIN-KEYWORD,hypixelsky
+  - DOMAIN-KEYWORD,spigotmc
+  - DOMAIN-KEYWORD,mcbbsmod
+  - DOMAIN-KEYWORD,blocksurvival
+  - DOMAIN-KEYWORD,mcmyadmin
+  - DOMAIN-KEYWORD,mcversion
+  - DOMAIN-KEYWORD,papermc
+  - DOMAIN-KEYWORD,fabricmc
+  - DOMAIN-KEYWORD,minecraftserver
+  - DOMAIN-KEYWORD,mcresource
+  - DOMAIN-KEYWORD,mcshader
+  - DOMAIN-KEYWORD,modpack
+  - DOMAIN-KEYWORD,curseforge
+  - DOMAIN-KEYWORD,lunarclient
+  - DOMAIN-KEYWORD,githubusercontent
+  - DOMAIN-SUFFIX,mojang.com
+  - DOMAIN-SUFFIX,minecraft.net
+  - DOMAIN-SUFFIX,minecraftservices.com
+  - DOMAIN-SUFFIX,minecraft-services.net
+  - DOMAIN-SUFFIX,xboxlive.com
+  - DOMAIN-SUFFIX,xbox.com
+  - DOMAIN-SUFFIX,live.com
+  - DOMAIN-SUFFIX,microsoftonline.com
+  - DOMAIN-SUFFIX,passport.net
+  - DOMAIN-SUFFIX,playfabapi.com
+  - DOMAIN-SUFFIX,akamaized.net
+  - DOMAIN-SUFFIX,minecraftprod.rtep.msgamestudios.com
+  - DOMAIN-SUFFIX,azureedge.net
+  - DOMAIN-SUFFIX,azurewebsites.net
+  - DOMAIN-SUFFIX,launcher.mojang.com
+  - DOMAIN-SUFFIX,authserver.mojang.com
+  - DOMAIN-SUFFIX,sessionserver.mojang.com
+  - DOMAIN-SUFFIX,api.mojang.com
+  - DOMAIN-SUFFIX,account.mojang.com
+  - DOMAIN-SUFFIX,skins.minecraft.net
+  - DOMAIN-SUFFIX,textures.minecraft.net
+  - DOMAIN-SUFFIX,mojang-api.com
+  - DOMAIN-SUFFIX,hypixel.net
+  - DOMAIN-SUFFIX,cubecraft.net
+  - DOMAIN-SUFFIX,mineplex.com
+  - DOMAIN-SUFFIX,2b2t.org
+  - DOMAIN-SUFFIX,wynncraft.com
+  - DOMAIN-SUFFIX,playmcm.cn
+  - DOMAIN-SUFFIX,mc-complex.com
+  - DOMAIN-SUFFIX,manacube.com
+  - DOMAIN-SUFFIX,gcnt.net
+  - DOMAIN-SUFFIX,aternos.org
+  - DOMAIN-SUFFIX,minehut.com
+  - DOMAIN-SUFFIX,pixel.gg
+  - DOMAIN-SUFFIX,mc-central.net
+  - DOMAIN-SUFFIX,blockdrop.org
+  - DOMAIN-SUFFIX,pika-network.net
+  - DOMAIN-SUFFIX,mccisland.net
+  - DOMAIN-SUFFIX,constantiam.net
+  - DOMAIN-SUFFIX,salc1.com
+  - DOMAIN-SUFFIX,hivebedrock.network
+  - DOMAIN-SUFFIX,thearkserver.net
+  - DOMAIN-SUFFIX,tntreload.com
+  - DOMAIN-SUFFIX,netherglades.net
+  - DOMAIN-SUFFIX,lifesteal.net
+  - DOMAIN-SUFFIX,performium.net
+  - DOMAIN-SUFFIX,herobrine.org
+  - DOMAIN-SUFFIX,cosmic.mc
+  - DOMAIN-SUFFIX,skyblock.net
+  - DOMAIN-SUFFIX,purpleprison.net
+  - DOMAIN-SUFFIX,universocraft.com
+  - DOMAIN-SUFFIX,jartexnetwork.com
+  - DOMAIN-SUFFIX,veltpvp.com
+  - DOMAIN-SUFFIX,servermine.com
+  - DOMAIN-SUFFIX,syuu.net
+  - DOMAIN-SUFFIX,minemen.club
+  - DOMAIN-SUFFIX,bedwarspractice.club
+  - DOMAIN-SUFFIX,craftgamers.net
+  - DOMAIN-SUFFIX,hyperlandsmc.net
+  - DOMAIN-SUFFIX,galaxite.net
+  - DOMAIN-SUFFIX,minegg.com
+  - DOMAIN-SUFFIX,maplemc.co
+  - DOMAIN-SUFFIX,5hmc.com
+  - DOMAIN-SUFFIX,nighthc.kr
+  - DOMAIN-SUFFIX,hixmc.com
+  - DOMAIN-SUFFIX,amethystland.kr
+  - DOMAIN-SUFFIX,opmc.kr
+  - DOMAIN-SUFFIX,uniplatz.co.kr
+  - DOMAIN-SUFFIX,pikaocraft.com
+  - DOMAIN-SUFFIX,juicymc.kr
+  - DOMAIN-SUFFIX,playdoly.com
+  - DOMAIN-SUFFIX,panda-craft.com
+  - DOMAIN-SUFFIX,mcfunny.co.kr
+  - DOMAIN-SUFFIX,cubemc.kr
+  - DOMAIN-SUFFIX,playdogcraft.com
+  - DOMAIN-SUFFIX,mcorigin.kr
+  - DOMAIN-SUFFIX,chunkcraft.net
+  - DOMAIN-SUFFIX,anotherlevel.kr
+  - DOMAIN-SUFFIX,uhcf.kr
+  - DOMAIN-SUFFIX,mcsm.kr
+  - DOMAIN-SUFFIX,curseforge.com
+  - DOMAIN-SUFFIX,modrinth.com
+  - DOMAIN-SUFFIX,spigotmc.org
+  - DOMAIN-SUFFIX,bukkit.org
+  - DOMAIN-SUFFIX,papermc.io
+  - DOMAIN-SUFFIX,fabricmc.net
+  - DOMAIN-SUFFIX,forge.net
+  - DOMAIN-SUFFIX,minecraftforge.net
+  - DOMAIN-SUFFIX,optifine.net
+  - DOMAIN-SUFFIX,quiltmc.org
+  - DOMAIN-SUFFIX,ftb.team
+  - DOMAIN-SUFFIX,modpacks.ch
+  - DOMAIN-SUFFIX,purpurmc.org
+  - DOMAIN-SUFFIX,neoforge.net
+  - DOMAIN-SUFFIX,bstats.org
+  - DOMAIN-SUFFIX,modmuss50.me
+  - DOMAIN-SUFFIX,liteloader.com
+  - DOMAIN-SUFFIX,mcforge.readthedocs.io
+  - DOMAIN-SUFFIX,creeperhost.net
+  - DOMAIN-SUFFIX,spongemc.org
+  - DOMAIN-SUFFIX,papermc.dev
+  - DOMAIN-SUFFIX,velocitypowered.com
+  - DOMAIN-SUFFIX,essentialsx.net
+  - DOMAIN-SUFFIX,viaversion.com
+  - DOMAIN-SUFFIX,luckperms.net
+  - DOMAIN-SUFFIX,enginehub.org
+  - DOMAIN-SUFFIX,coreprotect.net
+  - DOMAIN-SUFFIX,minecraftmods.com
+  - DOMAIN-SUFFIX,modrepo.de
+  - DOMAIN-SUFFIX,piston-data.mojang.com
+  - DOMAIN-SUFFIX,mixinbootstrap.org
+  - DOMAIN-SUFFIX,serverjars.com
+  - DOMAIN-SUFFIX,getbukkit.org
+  - DOMAIN-SUFFIX,architectury.dev
+  - DOMAIN-SUFFIX,terraformersmc.com
+  - DOMAIN-SUFFIX,jitpack.io
+  - DOMAIN-SUFFIX,devs.minecraftforge.net
+  - DOMAIN-SUFFIX,tlauncher.org
+  - DOMAIN-SUFFIX,multimc.org
+  - DOMAIN-SUFFIX,polymc.org
+  - DOMAIN-SUFFIX,prismlauncher.org
+  - DOMAIN-SUFFIX,atlauncher.com
+  - DOMAIN-SUFFIX,gdlauncher.com
+  - DOMAIN-SUFFIX,feather.gg
+  - DOMAIN-SUFFIX,lunar.gg
+  - DOMAIN-SUFFIX,lunarclient.com
+  - DOMAIN-SUFFIX,moonsworth.com
+  - DOMAIN-SUFFIX,lunarclientcdn.com
+  - DOMAIN-SUFFIX,lunarproxy.com
+  - DOMAIN-SUFFIX,lunaricons.com
+  - DOMAIN-SUFFIX,badlion.net
+  - DOMAIN-SUFFIX,labymod.net
+  - DOMAIN-SUFFIX,skyclient.co
+  - DOMAIN-SUFFIX,overwolf.com
+  - DOMAIN-SUFFIX,sklauncher.org
+  - DOMAIN-SUFFIX,teamextreme.net
+  - DOMAIN-SUFFIX,titan.tf
+  - DOMAIN-SUFFIX,technicpack.net
+  - DOMAIN-SUFFIX,tlhelp.net
+  - DOMAIN-SUFFIX,tlauncher.ru
+  - DOMAIN-SUFFIX,salwyrr.com
+  - DOMAIN-SUFFIX,pvplounge.com
+  - DOMAIN-SUFFIX,meteor-client.com
+  - DOMAIN-SUFFIX,essential.gg
+  - DOMAIN-SUFFIX,fabric-api.net
+  - DOMAIN-SUFFIX,inertiaclient.com
+  - DOMAIN-SUFFIX,minecraftcapes.net
+  - DOMAIN-SUFFIX,crystalpvp.cc
+  - DOMAIN-SUFFIX,viaforge.net
+  - DOMAIN-SUFFIX,wizardhax.com
+  - DOMAIN-SUFFIX,wurst-client.net
+  - DOMAIN-SUFFIX,aristois.net
+  - DOMAIN-SUFFIX,canelex.cc
+  - DOMAIN-SUFFIX,weavemc.dev
+  - DOMAIN-SUFFIX,fabricmc.dev
+  - DOMAIN-SUFFIX,vanilla-launcher.com
+  - DOMAIN-SUFFIX,mcpedl.com
+  - DOMAIN-SUFFIX,planetminecraft.com
+  - DOMAIN-SUFFIX,minecraftskins.com
+  - DOMAIN-SUFFIX,minecraft-heads.com
+  - DOMAIN-SUFFIX,9minecraft.net
+  - DOMAIN-SUFFIX,namemc.com
+  - DOMAIN-SUFFIX,minecraftcapes.co.uk
+  - DOMAIN-SUFFIX,vanillatweaks.net
+  - DOMAIN-SUFFIX,chunkbase.com
+  - DOMAIN-SUFFIX,mcassets.com
+  - DOMAIN-SUFFIX,minecraft-resourcepacks.com
+  - DOMAIN-SUFFIX,resourcepack.net
+  - DOMAIN-SUFFIX,mcpacks.net
+  - DOMAIN-SUFFIX,9minecraft.org
+  - DOMAIN-SUFFIX,minecraftxl.com
+  - DOMAIN-SUFFIX,minecrafteo.com
+  - DOMAIN-SUFFIX,minecraftdatapack.com
+  - DOMAIN-SUFFIX,minotar.net
+  - DOMAIN-SUFFIX,mcuuid.net
+  - DOMAIN-SUFFIX,blockbench.net
+  - DOMAIN-SUFFIX,skinsrestorer.net
+  - DOMAIN-SUFFIX,crafatar.com
+  - DOMAIN-SUFFIX,mc-heads.net
+  - DOMAIN-SUFFIX,mcmodels.net
+  - DOMAIN-SUFFIX,mc-market.org
+  - DOMAIN-SUFFIX,mcschematic.com
+  - DOMAIN-SUFFIX,minecraftmapdownload.com
+  - DOMAIN-SUFFIX,faithful.team
+  - DOMAIN-SUFFIX,itemsadder.com
+  - DOMAIN-SUFFIX,mcshaders.com
+  - DOMAIN-SUFFIX,mineimator.com
+  - DOMAIN-SUFFIX,mineskin.org
+  - DOMAIN-SUFFIX,blockdrops.net
+  - DOMAIN-SUFFIX,mcskinn.net
+  - DOMAIN-SUFFIX,novaskin.me
+  - DOMAIN-SUFFIX,seedhunt.net
+  - DOMAIN-SUFFIX,minecraft.fandom.com
+  - DOMAIN-SUFFIX,wiki.gg
+  - DOMAIN-SUFFIX,digminecraft.com
+  - DOMAIN-SUFFIX,minecraftguides.net
+  - DOMAIN-SUFFIX,mcreator.net
+  - DOMAIN-SUFFIX,minecraftservers.org
+  - DOMAIN-SUFFIX,minecraftforum.net
+  - DOMAIN-SUFFIX,mcversion.net
+  - DOMAIN-SUFFIX,mcstacker.net
+  - DOMAIN-SUFFIX,minecraftdata.com
+  - DOMAIN-SUFFIX,mc-datapacks.net
+  - DOMAIN-SUFFIX,serverminer.com
+  - DOMAIN-SUFFIX,minecraftitemids.com
+  - DOMAIN-SUFFIX,minecraftcommand.science
+  - DOMAIN-SUFFIX,apexmc.co
+  - DOMAIN-SUFFIX,mcuuid.nl
+  - DOMAIN-SUFFIX,gridcraft.net
+  - DOMAIN-SUFFIX,mcaddon.com
+  - DOMAIN-SUFFIX,minecraftbedrockforum.com
+  - DOMAIN-SUFFIX,minecraftmods.org
+  - DOMAIN-SUFFIX,dungeons.net
+  - DOMAIN-SUFFIX,minecraft-legends.com
+  - DOMAIN-SUFFIX,nvidia.com
+  - DOMAIN-SUFFIX,minecraftearthgame.com
+  - DOMAIN-SUFFIX,minecraftdungeons.net
+  - DOMAIN-SUFFIX,mixelizeus.com
+  - DOMAIN-SUFFIX,minecraft-story-mode.com
+  - DOMAIN-SUFFIX,telltale.com
+  - DOMAIN-SUFFIX,geysermc.org
+  - DOMAIN-SUFFIX,education.minecraft.net
+  - DOMAIN-SUFFIX,realms.minecraft.net
+  - DOMAIN-SUFFIX,feedback.minecraft.net
+  - DOMAIN-SUFFIX,aka.ms
+  - DOMAIN-SUFFIX,mcmiddleearth.com
+  - DOMAIN-SUFFIX,mcmarket.com
+  - DOMAIN-SUFFIX,crafatar.com
+  - DOMAIN-SUFFIX,floodgate.to
+  - DOMAIN-SUFFIX,mcplayhd.net
+  - DOMAIN-SUFFIX,mcplay.to
+  - DOMAIN-SUFFIX,worldedit.org
+  - DOMAIN-SUFFIX,bStats.org
+  - DOMAIN-SUFFIX,mcsrvstat.us
+  - DOMAIN-SUFFIX,minecraftmap.net
+  - DOMAIN-SUFFIX,papermc.com
+  - DOMAIN-SUFFIX,dynmap.us
+  - DOMAIN-SUFFIX,mcprohosting.com
+  - DOMAIN-SUFFIX,bitquest.co
+  - DOMAIN-SUFFIX,voxelbox.com
+  - DOMAIN-SUFFIX,worldofminecraft.com
+  - DOMAIN-SUFFIX,minecraft-mp.com
+  - DOMAIN-SUFFIX,minetime.ai
+  - DOMAIN-SUFFIX,resourceworld.net
+  - DOMAIN-SUFFIX,minecraftcaching.com
+  - DOMAIN-SUFFIX,velocity.nixuge.me
+  - DOMAIN-SUFFIX,mcnetwork.me
+  - DOMAIN-SUFFIX,mchub.com
+  - DOMAIN-SUFFIX,craftingstore.net
+  - DOMAIN-SUFFIX,mojangstudios.com
+  - DOMAIN-SUFFIX,mods.io
